--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/helmet": "^10.0.2",
+    "@fastify/rate-limit": "^7.6.0",
     "@fastify/static": "^6.6.0",
     "@fastify/type-provider-typebox": "^2.3.0",
     "@types/jsonwebtoken": "^8.5.9",
