--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/index.js",
+    "build": "tsc --build && cp -r ./src/public ./dist/src"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
-    "@types/node": "^18.11.9"
+    "@types/node": "^18.11.9",
+    "typescript": "^4.9.4"
   }
 }
