--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
+    "pdfkit": "^0.13.0",
     "sequelize": "^6.25.5",
     "sequelize-typescript": "^2.1.5"
   },
