--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/static": "^6.6.0",
     "@fastify/type-provider-typebox": "^2.3.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.10.0",
