--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "sequelize": "^6.25.5",
@@ -32,6 +33,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.7",
     "typescript": "^4.9.4"
   }
 }
