--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "fastify": "^4.10.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
@@ -26,12 +27,14 @@
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
+    "puppeteer": "^19.7.2",
     "sequelize": "^6.25.5",
     "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.1.2",
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.7",
     "typescript": "^4.9.4"
