--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "pdfkit": "^0.13.0",
     "puppeteer": "^19.7.2",
     "sequelize": "^6.25.5",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -37,6 +38,7 @@
     "@types/ejs": "^3.1.2",
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.6",
     "typescript": "^4.9.4"
   }
 }
