--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "clientes-dev": "file:",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "fastify": "^4.24.3",
